--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="overflow-x: hidden;">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -44,7 +44,7 @@
    
 </div>
 <!--sub-contnt-->
-<div class="container-fluid "style="background-color:#f9f9f9;" id="psc">
+<div class="container-fluid "style="background-color:#f9f9f9;" >
     <div class="container" id="white">
         <div class="row" id="movs">
                <div class="col-lg-3 col-md-3 col-sm-12">
@@ -81,7 +81,7 @@
     <p class="pros">Time-proven tools for beginners and pros.</p>
         <div class="container" id="crd">
           <div class="row">
-   <div class="col-lg-4 col-md-4 col-sm-12">
+   <div class="col-lg-4 col-md-4 col-sm-12 d-flex justify-content-center">
     <div class="card clrd" style="width: 16rem;height: 10rem;">
         <div class="card-body">
           <h5 class="card-title-1">Three trading platform</h5>
@@ -92,7 +92,7 @@
         </div>
       </div>
    </div>
-   <div class="col-lg-4 col-md-4 col-sm-12">
+   <div class="col-lg-4 col-md-4 col-sm-12 d-flex justify-content-center">
     <div class="card clrd" style="width: 16rem;height: 10rem;">
         <div class="card-body">
           <h5 class="card-title-1">1:500</h5>
@@ -103,7 +103,7 @@
         </div>
       </div>
    </div>
-   <div class="col-lg-4 col-md-4 col-sm-12">
+   <div class="col-lg-4 col-md-4 col-sm-12 d-flex justify-content-center">
     <div class="card clrd" style="width: 16rem;height: 10rem;">
         <div class="card-body">
           <h5 class="card-title-1">20 USD</h5>
@@ -118,7 +118,7 @@
     </div>
     <div class="container" id="crd">
         <div class="row">
- <div class="col-lg-4 col-md-4 col-sm-12">
+ <div class="col-lg-4 col-md-4 col-sm-12 d-flex justify-content-center">
   <div class="card clrd" style="width: 16rem;height: 10rem;">
       <div class="card-body">
         <h5 class="card-title-1">230</h5>
@@ -129,7 +129,7 @@
       </div>
     </div>
  </div>
- <div class="col-lg-4 col-md-4 col-sm-12">
+ <div class="col-lg-4 col-md-4 col-sm-12 d-flex justify-content-center">
   <div class="card clrd" style="width: 16rem;height: 10rem;">
       <div class="card-body">
         <h5 class="card-title-1">0%</h5>
@@ -140,7 +140,7 @@
       </div>
     </div>
  </div>
- <div class="col-lg-4 col-md-4 col-sm-12">
+ <div class="col-lg-4 col-md-4 col-sm-12 d-flex justify-content-center">
   <div class="card clrd" style="width: 16rem;height: 10rem;">
       <div class="card-body">
         <h5 class="card-title-1">350+</h5>
@@ -227,13 +227,17 @@
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true">
-                <img src="Assets/image/Vector-4.svg" class="img-fluid" id="arrow">
+                <div class="cl-1">
+                    <img src="Assets/image/Vector-arr.svg" class="img-fluid" id="arrow">
+                </div>
               </span>
               <span class="visually-hidden">Previous</span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true">
-                <img src="Assets/image/Vector-4.svg" class="img-fluid" id="arrow">
+               <div class="cl">
+                <img src="Assets/image/Vector-aro.svg" class="img-fluid" id="arrow">
+               </div>
               </span>
               <span class="visually-hidden">Next</span>
             </button>
