--- a/platform.html
+++ b/platform.html
@@ -16,7 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/155ad7575b.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body style="background-color:#f9f9f9;">
     <!--header-->
   <header></header>
   <!--1-->
@@ -38,9 +38,9 @@
   <div class="container-fluid"id="sps">
     <h3 class="web">Android</h3>
      <div class="container d-flex justify-content-center" id="sas"> 
-         <div class="row">
+         <div class="row py-4">
          
-             <div class="col-lg-6 col-md-6 col-sm-12 ">
+             <div class="col-lg-6 col-md-6 col-sm-12">
                 <h1>MetaTrader is back in the <br>App Store.
                 </h1>
                 <div class="row mt-5">
