--- a/header.html
+++ b/header.html
@@ -38,7 +38,7 @@
                     <a class="nav-link" href="mt5.html" tabindex="-1" aria-disabled="true" id="mt5">MT4/MT5</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="platform.html" id="Platform">Platform</a>
+                    <a class="nav-link" href="platform.html" id="platform">Platform</a>
                   </li>
                 
                  
