--- a/header.html
+++ b/header.html
@@ -32,7 +32,7 @@
                   </li>
                     
                   <li class="nav-item">
-                    <a class="nav-link" href="Trading.html" id="trading">Trading</a>
+                    <a class="nav-link" href="trading.html" id="trading">Trading</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="mt5.html" tabindex="-1" aria-disabled="true" id="mt5">MT4/MT5</a>
