--- a/trading.html
+++ b/trading.html
@@ -29,7 +29,152 @@
       </div>
     </div>
   </div>
-
+  <!--2-->
+  <div class="container-fluid"id="sps-1">
+    <h2 class="curr">FOREIGN CURRENCIES ARE WHAT<br>
+        FOREX IS ABOUT AT ITS CORE-USE THE<br>
+    BEST IT OFFERS TO YOUR ADVANTAGE.</h2>
+        <div class="container d-flex justify-content-center">
+            <div class="row">
+                       <div class="col-lg-3 col-md-3 col-sm-12">
+                       <div class="container d-flex justify-content-center">
+                             <h2 class="num">1</h2>
+                       </div>
+                          <h4 class="lowest">LOWEST SPREADS</h4>
+                          <P class="diff">The difference between the bid and 
+                           ask prices is the narrowest for
+                           currency pairs.</P>
+                       </div>
+                       <div class="col-lg-3 col-md-3 col-sm-12">
+                        <div class="container d-flex justify-content-center">
+                            <h2 class="num">2</h2>
+                      </div>
+                         <h4 class="lowest">SMALLEST MARKET<br>ENTRY COST</h4>
+                         <P class="diff">Begin with as little as 25 USD and
+                            trade your way towards bigger and 
+                            more profitable orders.</P>
+                       </div>
+                       <div class="col-lg-3 col-md-3 col-sm-12">
+                        <div class="container d-flex justify-content-center">
+                            <h2 class="num">3</h2>
+                      </div>
+                         <h4 class="lowest">BIGGEST LEVERAGE</h4>
+                         <P class="diff">We boost currency trading with
+                             1:500 leverage ratio on all our
+                              trading accounts.<br>
+                              How does it.</P>
+                       </div>
+                       <div class="col-lg-3 col-md-3 col-sm-12">
+                        <div class="container d-flex justify-content-center">
+                            <h2 class="num">4</h2>
+                      </div>
+                         <h4 class="lowest">HIGHEST TRADING<br>VOLUME</h4>
+                         <P class="diff">Organisation and private traders
+                            perform thousands of currency
+                             operations every second.</P>
+                       </div>
+            </div>
+        </div>
+  </div>
+  <!--3-->
+  <div class="container-fluid" id="sps-1">
+    <h2 class="ready">WHY OCTAFX IS YOUR BEST CHOICE FOR CURRENCY TRADING</h2>
+         <div class="container mt-5">
+                <div class="row">
+                       <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center">
+                         <div class="">
+                             <img src="Assets/image/Group 292.svg" class="img-fluid" id="man">
+                         </div>
+                       </div>
+                       <div class="col-lg-6 col-md-6 col-sm-12">
+                           <h3>WE DON'T CHARGE ANY<br>HIDDEN COMMISSIONS</h3>
+                           <P class="trust">Trust is our most valued asset. That's why our<br>
+                              trading conditions are as transparent as they can<br>
+                              be. No commissions on deposits, withdrawals, and<br>
+                              orders, and no unpleasant surpises. Trade with<br>
+                              confidence.</P>
+                       </div>
+                </div>
+         </div>
+  </div>
+<!--4-->
+<div class="container-fluid"id="sps">
+      <div class="container">
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                    <h3 class="wed">WE PROVIDE NEGATIVE<br>BALANCE PROTECTION</h3>
+                    <P class="trust">If your balance goes negative after an<br>
+                        unsuccessful trade, we'll compensate it back to<br>
+                         zero In this case, you won't owe anything. Still, we<br>
+                         recommend you to build a solid strategy and avoid<br>
+                         opening trades without a plan.</P>
+                </div>
+                   <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center">
+                     <div class="">
+                         <img src="Assets/image/Group 291.svg" class="img-fluid" id="man-1">
+                     </div>
+                   </div>
+            </div>
+     </div>
+      </div>
+</div>
+<!--5-->
+<div class="container-fluid" id="sps">
+     <div class="container">
+        <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center">
+              <div class="">
+                  <img src="Assets/image/Group 293.svg" class="img-fluid" id="man">
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-12">
+                <h3 class="trust-1">WE ALLOW AUTO TRADING</h3>
+                <P class="trust">Do you want trading bots to earn money for you?<br>
+                    Use Expert Advisor, cBot, or other automated<br>
+                    system and run it on your OctaFX trading account.<br>
+                   Test the bot on our limitless demo accounts and <br>
+                  then put it to action.</P>
+            </div>
+     </div>
+     </div>
+</div>
+<!--6-->
+<div class="container-fluid" id="sps">
+    <h2 class="ready">WE CREATED ACCOUNT TYPES TO SATISFY ALL YOUR NEEDS</h2>
+    <div class="container d-flex justify-content-center" id="sps-3">
+        <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center" >
+             <div class="card"  id="pinks">
+                 <div class="card-body">
+                     <h3 class="mts">MetaTrader 4</h3>
+                     <p class="for">35 Currency Pairs</p>
+                     <p class="for">0.6+ Pips Spread</p>
+                     <p class="for">1:500 Leverage</p>
+<br>
+                        <div class="d-flex justify-content-center">
+                         <button class="btn btn-4">Open Account</button>
+                        </div>
+                 </div>
+               </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center" id="mup">
+             <div class="card" id="pinks">
+                 <div class="card-body">
+                    <h3 class="mts">MetaTrader 5</h3>
+                    <p class="for">35 Currency Pairs</p>
+                    <p class="for">0.6+ Pips Spread</p>
+                    <p class="for">1:500 Leverage</p>
+<br>
+                       <div class="d-flex justify-content-center">
+                        <button class="btn btn-4">Open Account</button>
+                       </div>
+                 </div>
+               </div>
+            </div>
+        </div>
+     </div>
+</div>
   <footer></footer>
   <!---->
    <script src="./Assets/js/script.js"></script>
