--- a/trading.html
+++ b/trading.html
@@ -86,7 +86,7 @@
                              <img src="Assets/image/Group 292.svg" class="img-fluid" id="man">
                          </div>
                        </div>
-                       <div class="col-lg-6 col-md-6 col-sm-12">
+                       <div class="col-lg-6 col-md-6 col-sm-12" id="do">
                            <h3>WE DON'T CHARGE ANY<br>HIDDEN COMMISSIONS</h3>
                            <P class="trust">Trust is our most valued asset. That's why our<br>
                               trading conditions are as transparent as they can<br>
@@ -122,7 +122,7 @@
 <!--5-->
 <div class="container-fluid" id="sps">
      <div class="container">
-        <div class="row">
+        <div class="row" id="pink-color-2">
             <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center">
               <div class="">
                   <img src="Assets/image/Group 293.svg" class="img-fluid" id="man">
