--- a/trading.html
+++ b/trading.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.js"
     integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>   
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/155ad7575b.js" crossorigin="anonymous"></script>
 </head>
@@ -38,7 +38,7 @@
             <div class="row">
                        <div class="col-lg-3 col-md-3 col-sm-12">
                        <div class="container d-flex justify-content-center">
-                             <h2 class="num">1</h2>
+                             <h2 class="num-1">1</h2>
                        </div>
                           <h4 class="lowest">LOWEST SPREADS</h4>
                           <P class="diff">The difference between the bid and 
