--- a/mt5.html
+++ b/mt5.html
@@ -33,7 +33,7 @@
                 <thead>
                   <tr>
                     <th scope="col"></th>
-                    <th scope="col" class="mt"><h3>MT5</h2></t3>
+                    <th scope="col" class="mtse"><h3>MT5</h2></t3>
                     <th scope="col"><h3>MT4</t3>
                   
                   </tr>
