--- a/header.html
+++ b/header.html
@@ -44,7 +44,7 @@
                  
                  
                   <li class="nav-item">
-                    <a class="nav-link" href="Forex.html" tabindex="-1" aria-disabled="true" id="forex">Analytics</a>
+                    <a class="nav-link" href="analytic.html" tabindex="-1" aria-disabled="true" id="ana">Analytics</a>
                   </li>
                    <li class="nav-item">
                     <a class="nav-link" href="Mt5.html" tabindex="-1" aria-disabled="true" id="mt">Account</a>
