--- a/analytic.html
+++ b/analytic.html
@@ -39,7 +39,7 @@
     <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-technical-analysis.js" async>
     {
     "interval": "1m",
-    "width": 425,
+    "width": 400,
     "isTransparent": false,
     "height": 550,
     "symbol": "NASDAQ:AAPL",
@@ -216,7 +216,7 @@
   <div class="container-fluid" id="sps-5">
     <h3 class="ready">Economic Calender</h3>
          <div class="container d-flex justify-content-center">
-            <div class="mt-4">
+            <div class="classs mt-4">
 <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
     <div class="tradingview-widget-container__widget"></div>
@@ -241,7 +241,7 @@
   <div class="container-fluid" id="sps-5">
     <h3 class="ready">Interest Rates</h3>
          <div class="container d-flex justify-content-center">
-            <div class="mt-4">
+            <div class="classs mt-4">
 <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
     <div class="tradingview-widget-container__widget"></div>
@@ -478,7 +478,9 @@
             
             
         </div>
-  </div>
+  </div>\<br>
+  <br>
+  <br>
   <footer></footer>
   <!---->
    <script src="./Assets/js/script.js"></script>
