--- a/analytic.html
+++ b/analytic.html
@@ -39,7 +39,7 @@
     <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-technical-analysis.js" async>
     {
     "interval": "1m",
-    "width": 400,
+    "width": "350",
     "isTransparent": false,
     "height": 550,
     "symbol": "NASDAQ:AAPL",
@@ -53,7 +53,7 @@
                     </div>
 
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-12">
+                <div class="col-lg-6 col-md-6 col-sm-12" id="nsm">
                     <div class="classs">
                         <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
@@ -69,7 +69,7 @@
     "isTransparent": false,
     "showSymbolLogo": true,
     "showFloatingTooltip": false,
-    "width": "400",
+    "width": "350",
     "height": "660",
     "plotLineColorGrowing": "rgba(41, 98, 255, 1)",
     "plotLineColorFalling": "rgba(41, 98, 255, 1)",
@@ -415,7 +415,7 @@
                             </div>
                           </div>
                       </div>
-                      <div class="col-lg-6 col-md-6 col-sm-12">
+                      <div class="col-lg-6 col-md-6 col-sm-12" id="nsm">
                         <div class="card"   id="size">
                             <div class="card-body">
                               <h4 class="card-title">50 rising startups in Southeast<br>Asia</h4>
@@ -456,7 +456,7 @@
                          </div>
                        </div>
                    </div>
-                   <div class="col-lg-6 col-md-6 col-sm-12">
+                   <div class="col-lg-6 col-md-6 col-sm-12"id="nsm">
                      <div class="card"   id="size">
                          <div class="card-body">
                            <h4 class="card-title">Monaco launches now tourism<br>
