--- a/analytic.html
+++ b/analytic.html
@@ -16,7 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/155ad7575b.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body style="background-color:#f9f9f9;">
      <!--header-->
   <header></header>
   <!--1-->
