--- a/header.html
+++ b/header.html
@@ -47,7 +47,7 @@
                     <a class="nav-link" href="analytic.html" tabindex="-1" aria-disabled="true" id="ana">Analytics</a>
                   </li>
                    <li class="nav-item">
-                    <a class="nav-link" href="Mt5.html" tabindex="-1" aria-disabled="true" id="mt">Account</a>
+                    <a class="nav-link" href="Account.html" tabindex="-1" aria-disabled="true" id="account">Account</a>
                   </li>
                 </ul>
                 <form class="d-flex justify-content-center">
