--- a/Account.html
+++ b/Account.html
@@ -30,7 +30,7 @@
   <div class="container-fluid" id="sps">
     <h2 class="ready">We accept all the most popular payment methods</h2>
          <div class="container">
-               <div class="" id="tab">
+               <div class="table-responsive" id="tab">
                 <table class="table">
                     <thead>
                       <tr>
@@ -44,28 +44,92 @@
                     </thead>
                     <tbody>
                       <tr>
-                        <td scope="row">1</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                        <td>@mdo</td>
-                        <td>@mdo</td>
+                        <td scope="row"><img src="Assets/image/nt.svg" class="img-fluid"></td>
+                        <td>500000,00 INR</td>
+                        <td>Free</td>
+                        <td>Available</td>
+                        <td>1-3Hours</td>
+                        <td><button class="btn btn-6">Get Verified first</button></td>
                       </tr>
                       <tr>
-                        <td scope="row">2</td>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                        <td>@mdo</td>
-                        <td>@mdo</td>
+                        <td scope="row"><img src="Assets/image/pk_ppe.svg" class="img-fluid"></td>
+                        <td>0.00037000 BTC</td>
+                        <td>Free</td>
+                        <td>Not Applied</td>
+                        <td>3-30Hours</td>
+                        <td><button class="btn btn-6">Get Verified first</button></td>
                       </tr>
                       <tr>
-                        <td scope="row">3</td>
-                        <td>@mdo</td>
-                        <td>@mdo</td>
-                        <td>@twitter</td>
-                        <td>@mdo</td>
-                        <td>@mdo</td>
+                        <td scope="row"><img src="Assets/image/exactly.svg" class="img-fluid"></td>
+                        <td>500000,00 INR</td>
+                        <td>Free</td>
+                        <td>Available</td>
+                        <td>1-3Hours</td>
+                        <td><button class="btn btn-6">Make a deposit</button></td>
+                      </tr>
+                      <tr>
+                        <td scope="row"><img src="Assets/image/ind_nb.svg" class="img-fluid" id="ind"></td>
+                        <td>500000,00 INR</td>
+                        <td>Free</td>
+                        <td>Available</td>
+                        <td>1-3Hours</td>
+                        <td><button class="btn btn-6">Make a deposit</button></td>
+                      </tr>
+                      <tr>
+                        <td scope="row"><img src="Assets/image/mb.svg" class="img-fluid" id="ind-1"></td>
+                        <td>500000,00 INR</td>
+                        <td>Free</td>
+                        <td>Available</td>
+                        <td>1-3Hours</td>
+                        <td><button class="btn btn-6">Get Verified first</button></td>
+                      </tr>
+                      <tr>
+                        <td scope="row"><img src="Assets/image/upi.svg" class="img-fluid"></td>
+                        <td>500000,00 INR</td>
+                        <td>Free</td>
+                        <td>Available</td>
+                        <td>1-3Hours</td>
+                        <td><button class="btn btn-6">Make a deposit</button></td>
+                      </tr>
+                      <tr>
+                        <td scope="row"><img src="Assets/image/btc.svg" class="img-fluid"></td>
+                        <td>500000,00 INR</td>
+                        <td>Free</td>
+                        <td>Available</td>
+                        <td>1-3Hours</td>
+                        <td><button class="btn btn-6">Make a deposit</button></td>
+                      </tr>
+                      <tr>
+                        <td scope="row" class="lite"><img src="Assets/image/ltc.svg" class="img-fluid"id="lit">Litecoin</td>
+                        <td>500000,00 INR</td>
+                        <td>Free</td>
+                        <td>Available</td>
+                        <td>1-3Hours</td>
+                        <td><button class="btn btn-6">Get Verified first</button></td>
+                      </tr>
+                      <tr>
+                        <td scope="row" class="lite"><img src="Assets/image/doge.svg" class="img-fluid" id="lit">Dogecoin</td>
+                        <td>500000,00 INR</td>
+                        <td>Free</td>
+                        <td>Available</td>
+                        <td>1-3Hours</td>
+                        <td><button class="btn btn-6">Make a deposit</button></td>
+                      </tr>
+                      <tr>
+                        <td scope="row"class="lite"><img src="Assets/image/usdtt.svg" class="img-fluid"id="lit">Tether TRC-20</td>
+                        <td>500000,00 INR</td>
+                        <td>Free</td>
+                        <td>Available</td>
+                        <td>1-3Hours</td>
+                        <td><button class="btn btn-6">Make a deposit</button></td>
+                      </tr>
+                      <tr>
+                        <td scope="row"class="lite"><img src="Assets/image/binpay.svg" class="img-fluid"id="lit">Ethereum</td>
+                        <td>500000,00 INR</td>
+                        <td>Free</td>
+                        <td>Available</td>
+                        <td>1-3Hours</td>
+                        <td><button class="btn btn-6">Get Verified first</button></td>
                       </tr>
                     </tbody>
                   </table>
