--- a/footer.html
+++ b/footer.html
@@ -22,7 +22,7 @@
        <div class="container">
          <div class="top mt-3 row ">
              <div class="col-lg-3 col-md-3 col-sm-12">
-                 <h2>Logo</h2>
+                 <h2 class="ll">Logo</h2>
                  <div class="lo">
                      <p style="color: white;">Contact us</p>
                      <p><a href="javascript:;" style="text-decoration-line: none;" class="support">support.ae@Pepperstone.com</a></p>
