--- a/Account.html
+++ b/Account.html
@@ -145,26 +145,26 @@
                   <header>Benefit from our fixed rate</header>
                   <form action="#">
                    <div class="from">
-                        <div class="select-box inr">
-                         <input class="select" type="text" value="INR">
+                        <div class="select-box " id="inr">
+                         <input class="select" type="text" value="INR" >
                         </div>
-                        <div class="select-box usd-1" >
+                        <div class="select-box " id="inr-1"  >
                           <input class="select" type="text" value="USD">
                          </div>
                       </div>
-                      <div class="icon"><img src="Assets/image/ri_exchange-fill.svg" class="bi"></div>
+                      <div class="icon"><img src="Assets/image/ri_exchange-fill.svg" class="bi"  id="but" ></div>
                       <div class="to">
-                        <div class="select-box usd">
+                        <div class="select-box " id="usd">
                           <input class="select" type="text" value="USD">
                         </div>
-                        <div class="select-box inr-1">
+                        <div class="select-box "  id="usd-1">
                           <input class="select" type="text" value="INR">
                         </div>
                       </div>
                   
                     <div class="exchange-rate"><b>55 INR = 1 USD</b></div>
                    <div class="d-flex justify-content-center">
-                    <button onclick="currency()" class="btn btn-7">Deposit ito your amount</button>
+                    <button  class="btn btn-7" >Deposit ito your amount</button>
                    </div>
                   </form>
                 </div>
