--- a/platform.html
+++ b/platform.html
@@ -22,7 +22,7 @@
   <!--1-->
   <div class="img">
     <div class="rect-1">
-      <h4 class="centered-1">Platforms</h4>
+      <h4 class="centered-1">PLATFORMS</h4>
     </div>
   </div>
   <!--2-->
