--- a/footer.html
+++ b/footer.html
@@ -79,7 +79,7 @@
                 
                      <a href="javascript:;" style="text-decoration-line: none;" class="support">Level 15, Office 1502 A, Tower 2 Education P.O.Box 482087, DIFC</a><br>
                      <a href="javascript:;" style="text-decoration-line: none;" class="support">Learn to trade forex</a><br>
-                     <a href="javascript:;" style="text-decoration-line: none;" class="support">The Daily Fix</a><br>
+                     <!-- <a href="javascript:;" style="text-decoration-line: none;" class="support">The Daily Fix</a><br> -->
                      <a href="javascript:;" style="text-decoration-line: none;"class="support">Learn to trade CFDs</a><br>
                      <a href="javascript:;" style="text-decoration-line: none;" class="support">Webinars</a><br>
                      <a href="javascript:;" style="text-decoration-line: none;" class="support">Trading guides</a><br>
