--- a/Account.html
+++ b/Account.html
@@ -142,7 +142,7 @@
                <div class="d-flex justify-content-center">
                
                 <div class="beneift">
-                  <header>Benefit from our fixed rate</header>
+                  <h3>Benefit from our fixed rate</h3>
                   <form action="#">
                    <div class="from">
                         <div class="select-box" id="inr">
@@ -162,7 +162,8 @@
                         </div>
                       </div>
                   
-                    <div class="exchange-rate"><b>55 INR = 1 USD</b></div>
+                    <div class="exchange-rate" id="chage"><b>55 INR = 1 USD</b></div>
+                    <div class="exchange-rate-1" id="chage-1"><b>1 USD = 55 INR</b></div>
                    <div class="d-flex justify-content-center">
                     <button  class="btn btn-7" >Deposit ito your amount</button>
                    </div>
