--- a/footer.html
+++ b/footer.html
@@ -77,7 +77,7 @@
              </div>
              <div class="col-lg-3 col-md-3 col-sm-12 csd" id="a">
                 
-                     <a href="javascript:;" style="text-decoration-line: none;" class="support">Level 15, Office 1502 A, Tower 2 Education P.O.Box 482087, DIFC</a><br>
+                     <a href="javascript:;" style="text-decoration-line: none;" class="support">Level 15, Office 1502 A, Tower 2 <br>Education P.O.Box 482087, DIFC</a><br>
                      <a href="javascript:;" style="text-decoration-line: none;" class="support">Learn to trade forex</a><br>
                      <!-- <a href="javascript:;" style="text-decoration-line: none;" class="support">The Daily Fix</a><br> -->
                      <a href="javascript:;" style="text-decoration-line: none;"class="support">Learn to trade CFDs</a><br>
