--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@
                 <div class="row g-0">
                     <div class="col-8">
                         <div class="card-body">
-                          <h6 class="card-title-9">Download on the</h6>
-                          <p class="card-text-9">App Store</p>
+                          <h6 class="card-title-9">Get in on</h6>
+                          <p class="card-text-9">Google Playstore</p>
                           
                         </div>
                       </div>
