--- a/analytic.html
+++ b/analytic.html
@@ -397,7 +397,7 @@
     <h3 class="ready">Forex News</h3>
            <div class="container mt-5 d-flex justify-content-center">
                <div class="row">
-                      <div class="col-lg-6 col-md-6 col-sm-12">
+                      <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center">
                         <div class="card"  id="size">
                             <div class="card-body">
                               <h4 class="card-title">Sony buys $400m stake<br>
@@ -415,7 +415,7 @@
                             </div>
                           </div>
                       </div>
-                      <div class="col-lg-6 col-md-6 col-sm-12" id="nsm">
+                      <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center" id="nsm">
                         <div class="card"   id="size">
                             <div class="card-body">
                               <h4 class="card-title">50 rising startups in Southeast<br>Asia</h4>
@@ -438,7 +438,7 @@
            </div>
            <div class="container mt-5 d-flex justify-content-center">
             <div class="row">
-                   <div class="col-lg-6 col-md-6 col-sm-12">
+                   <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center">
                      <div class="card"  id="size">
                          <div class="card-body">
                            <h4 class="card-title">Grab names new chief financial<br>
@@ -456,7 +456,7 @@
                          </div>
                        </div>
                    </div>
-                   <div class="col-lg-6 col-md-6 col-sm-12"id="nsm">
+                   <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center"id="nsm">
                      <div class="card"   id="size">
                          <div class="card-body">
                            <h4 class="card-title">Monaco launches now tourism<br>
