--- a/footer.html
+++ b/footer.html
@@ -25,7 +25,7 @@
                  <h2 class="ll">Logo</h2>
                  <div class="lo">
                      <p style="color: white;">Contact us</p>
-                     <p><a href="javascript:;" style="text-decoration-line: none;" class="support">support.ae@Pepperstone.com</a></p>
+                     <p><a href="javascript:;" style="text-decoration-line: none;" class="support">support.ae@Demo.com</a></p>
                  
                  </div>
              </div>
@@ -40,9 +40,9 @@
           <div class="row">
              <div class="col-lg-3 col-md-3 col-sm-12" id="a">
                  
-                     <a href="javascript:;" style="text-decoration-line: none;"class="support">Pepperstone Financial Services (DIFC) 
+                     <a href="javascript:;" style="text-decoration-line: none;"class="support">Demo Financial Services (DIFC) 
                          Limited</a><br>
-                         <a href="javascript:;" style="text-decoration-line: none;"class="support">Why Pepperstone </a><br>
+                         <a href="javascript:;" style="text-decoration-line: none;"class="support">Why Demo </a><br>
                              <a href="javascript:;" style="text-decoration-line: none;"class="support">Careers </a><br>
                                  <a href="javascript:;" style="text-decoration-line: none;"class="support">Trading with us</a><br>   
                                      <a href="javascript:;" style="text-decoration-line: none;"class="support">Platforms</li> </a><br>   
@@ -124,14 +124,14 @@
                 </div>
             </div>
             <p class="mov-1">
-         © 2022 Pepperstone Financial Services (DIFC) Limited<br>
+         © 2022 Demo Financial Services (DIFC) Limited<br>
          Trading CFDs and FX carries significant risk. Trading OTC derivatives may not be suitable for everyone so please ensure that you fully understand the risks involved and take care to manage your<br> 
-         exposure. You have no ownership of the underlying asset. Pepperstone Financial Services (DIFC) Limited does not issue advice, recommendations or opinion in relation to acquiring, holding or<br> 
-         disposing of OTC derivatives nor is Pepperstone a financial advisor. All services are provided on an execution only basis. Pepperstone Financial Services (DIFC) Limited only provides information of a<br> 
+         exposure. You have no ownership of the underlying asset. Demo Financial Services (DIFC) Limited does not issue advice, recommendations or opinion in relation to acquiring, holding or<br> 
+         disposing of OTC derivatives nor is Demo a financial advisor. All services are provided on an execution only basis. Demo Financial Services (DIFC) Limited only provides information of a<br> 
          general nature and does not take into account your financial objectives, personal circumstances. We recommend that you seek independent personal financial or legal advice.<br>
-         Pepperstone Financial Services (DIFC) Limited is registered at Al Fattan Currency House, Tower 2, Level 15, Office 1502 A, P. O. Box 482087, DIFC, Dubai, United Arab Emirates and is regulated by<br> 
+         Demo Financial Services (DIFC) Limited is registered at Al Fattan Currency House, Tower 2, Level 15, Office 1502 A, P. O. Box 482087, DIFC, Dubai, United Arab Emirates and is regulated by<br> 
          the DFSA under license number F004356.<br>
-         The product issuer is Pepperstone Group Limited registered at Level 16, Tower One, 727 Collins St, Docklands, Victoria 3008, Australia and is licensed and regulated by the Australian Securities and<br> 
+         The product issuer is Demo Group Limited registered at Level 16, Tower One, 727 Collins St, Docklands, Victoria 3008, Australia and is licensed and regulated by the Australian Securities and<br> 
          Investments Commission, AFSL 414530. You should consider whether you are part of the product issuer s target market by reviewing the TMD, and read the PDS and other legal documents to ensure<br> 
          you fully understand the risks before you make any trading decisions.<br>
             </p>
